# QT_FEATURE_sctp_qa_automation

./: README.md
Qt_themself/: toolchain_cross.cmake  toolchain_host.cmake
myBuildroot/: myDefconfigNonDefault
myBuildroot/my_external_tree/configs/: qemu_x86_ssh_defconfig
progs/QServer_test/src/: CMakeLists.txt  main.cpp  server.cpp  server.h
progs/QSocketClient_test/src/: CMakeLists.txt  client.cpp  client.h  main.cpp
test_SSE2/: main.cpp
test_SSE2/build-test_SSE2/.qt/: QtDeploySupport.cmake
